web/app/themes/laravel-theme-child/resources/assets/styles/flexible/common/_main.scss
.fcb {
  min-width: 320px;
  overflow: hidden;

  &.fcb-primary {
    background-color: theme-color("primary");
    color: $white;

    .btn {
      @extend .btn-secondary;
    }

    .btn-link,
    .link {
      color: $white;
    }
  }

  &.fcb-secondary {
    background-color: theme-color("secondary");
    color: $white;

    .btn {
      @extend .btn-primary;
    }

    .btn-link,
    .link {
      color: $white;
    }
  }

  &.fcb-white {
    color: theme-color("primary");
    background-color: $white;

    .btn {
      @extend .btn-primary;
    }

    .btn-link,
    .link {
      @extend .text-primary;
    }
  }

  .content {
    h1 {
      &:first-child {
        margin-top: -10px;
      }
    }

    h2,
    h3 {
      &:first-child {
        margin-top: -8px;
      }
    }

    p,
    ul,
    li {
      &:last-child {
        margin-bottom: 0;
        padding-bottom: 0;
      }
    }
  }

  .fcb-col-left {
    @extend .offset-md-0;

    &.fcb-align-text {
      text-align: left;
    }
  }

  .fcb-col-center {
    @extend .offset-md-2;

    &.fcb-align-text {
      text-align: center;
    }
  }

  .fcb-col-right {
    @extend .offset-md-4;

    &.fcb-align-text {
      text-align: right;
    }
  }
}

.fcb-v-align {
  display: flex;

  > div {
    margin: auto 0;
  }
}

.fcb-col-image {
  min-height: $row-min-height;

  @include background-image();
}

